@@ -2,6 +2,7 @@ Revision history for Chart::OFC2
 
 0.03    26.11.2008
         - pie chart added
+        - hbar chart added
         - 
 
 0.02    24.11.2008
